--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,17 +1,13 @@
-
 server {
     listen 80;
-    # server_name localhost;
+    server_name localhost;
 
+    root /usr/share/nginx/html;
+    index index.html;
 
-    # Frontend
+    # Handle all routes by serving index.html (for React client-side routing)
     location / {
-        proxy_pass http://client:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        error_page 404 /index.html;
+        try_files $uri /index.html;
     }
 
     # Backend
