--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,7 @@ services:
     depends_on:
       - mongo
     networks:
-      - mern-network
-
+      - blog-network
 
   client:
     build:
@@ -21,8 +20,7 @@ services:
     depends_on:
       - server
     networks:
-      - mern-network
-
+      - blog-network
 
   mongo:
     image: mongo:latest
@@ -32,20 +30,10 @@ services:
     ports:
       - "27017:27017"
     networks:
-      - mern-network
-
-    
-  # nginx:
-  #   ports:
-  #     - "80:80"
-  #   depends_on:
-  #     - server
-  #     - client
-  #   networks:
-  #     - mern-network
+      - blog-network
 
 networks:
-  mern-network:
+  blog-network:
     driver: bridge
 
 volumes:
