--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,26 @@ services:
   mongo:
     image: mongo:latest
     container_name: mongo
+    restart: always
     volumes:
       - mongo_data:/data/db
     ports:
       - "27017:27017"
     networks:
       - blog-network
+
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
+    restart: always
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_OPTIONS_EDITORTHEME: default
+    networks:
+      - blog-network
+    
 
 networks:
   blog-network:
